--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@loadable/component": "^5.13.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "loaders.css": "^0.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-loaders": "^3.0.1",
-    "react-lottie": "^1.2.3",
     "react-progressive-image-loading": "^3.0.3",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.3",
     "react-typing-effect": "^2.0.3",
     "styled-components": "^5.2.0",
-    "styled-icons": "^10.21.0"
+    "styled-icons": "^10.21.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
