--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "caniuse-lite": "^1.0.30001286",
     "loaders.css": "^0.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -11,10 +15,7 @@
     "react-scripts": "^4.0.3",
     "react-typing-effect": "^2.0.3",
     "styled-components": "^5.2.0",
-    "styled-icons": "^10.21.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1"
+    "styled-icons": "^10.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
